// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowSelector behaviour selects next if click right arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      aria-label="Select previous project"
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span
      aria-labelledby="arrowSelectorLabel"
    >
      1 / 2
    </span>
    <button
      aria-label="Select next project"
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
    id="arrowSelectorLabel"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects prev if click left arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      aria-label="Select previous project"
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span
      aria-labelledby="arrowSelectorLabel"
    >
      2 / 2
    </span>
    <button
      aria-label="Select next project"
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
    id="arrowSelectorLabel"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector rendering renders ArrowSelector 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      aria-label="Select previous project"
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span
      aria-labelledby="arrowSelectorLabel"
    >
      1 / 2
    </span>
    <button
      aria-label="Select next project"
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
    id="arrowSelectorLabel"
  >
    Current
  </div>
</div>
`;
